Fix: Fix responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ h1 {
         justify-content: center;
         gap: 15px;
         position: absolute;
-        bottom: 30px;
+        bottom: 30vh;
     }
 
     .navigate-btn {
